add students page for admin

--- a/BlazorServerUniversity/Pages/_Layout.cshtml
+++ b/BlazorServerUniversity/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="/css/site.css" rel="stylesheet"/>
     <link href="BlazorServerUniversity.styles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
