--- a/BlazorServerUniversity/Shared/NavMenu.razor
+++ b/BlazorServerUniversity/Shared/NavMenu.razor
@@ -16,8 +16,8 @@
         </div>
         <AuthorizeView Roles="Admin">
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="counter">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <NavLink class="nav-link" href="students">
+                    <span class="oi oi-person" aria-hidden="true"></span> Students
                 </NavLink>
             </div>
         </AuthorizeView>
