--- a/BlazorServerUniversity/Pages/Counter.razor
+++ b/BlazorServerUniversity/Pages/Counter.razor
@@ -1,5 +1,9 @@
 @page "/students"
+@using BlazorServerUniversity.Repositories
 @attribute [Authorize (Roles = "Admin")]
+
+@inject IStudentRepository studentRepository;
+
 <PageTitle>Counter</PageTitle>
 
 <div class="container mt-3 mb-4">
@@ -16,7 +20,11 @@
               </tr>
             </thead>
             <tbody>
+            
+            @foreach (var student in _students)
+            {
               <tr class="candidates-list">
+
                 <td class="title">
                   <div class="thumb">
                     <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
@@ -24,17 +32,18 @@
                   <div class="candidate-list-details">
                     <div class="candidate-list-info">
                       <div class="candidate-list-title">
-                        <h5 class="mb-0"><a href="#">Brooke Kelly</a></h5>
+                        <h5 class="mb-0"><a href="#">@student.FirstName @student.LastName</a></h5>
                       </div>
                       <div class="candidate-list-option">
                         <ul class="list-unstyled">
-                          <li><i class="fas fa-filter pr-1"></i>Information Technology</li>
-                          <li><i class="fas fa-map-marker-alt pr-1"></i>Rolling Meadows, IL 60008</li>
+                          <li><i class="fas fa-filter pr-1"></i> @student.GroupName</li>
+                          <li><i class="fas fa-map-marker-alt pr-1"></i> @student.Address</li>
                         </ul>
                       </div>
                     </div>
                   </div>
                 </td>
+
                 <td class="candidate-list-favourite-time text-center">
                   <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
                   <span class="candidate-list-time order-1">Admitted</span>
@@ -47,130 +56,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr class="candidates-list">
-                <td class="title">
-                  <div class="thumb">
-                    <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                  </div>
-                  <div class="candidate-list-details">
-                    <div class="candidate-list-info">
-                      <div class="candidate-list-title">
-                        <h5 class="mb-0"><a href="#">Ronald Bradley</a></h5>
-                      </div>
-                      <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                          <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
-                          <li><i class="fas fa-map-marker-alt pr-1"></i>Monroe Township, NJ 08831</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-                <td class="candidate-list-favourite-time text-center">
-                  <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
-                  <span class="candidate-list-time order-1">Admitted</span>
-                </td>
-                <td>
-                  <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                    <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                    <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                    <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                  </ul>
-                </td>
-              </tr>
-              <tr class="candidates-list">
-                <td class="title">
-                  <div class="thumb">
-                    <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
-                  </div>
-                  <div class="candidate-list-details">
-                    <div class="candidate-list-info">
-                      <div class="candidate-list-title">
-                        <h5 class="mb-0"><a href="#">Rafael Briggs</a></h5>
-                      </div>
-                      <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                          <li><i class="fas fa-filter pr-1"></i>Recruitment Consultancy</li>
-                          <li><i class="fas fa-map-marker-alt pr-1"></i>Haines City, FL 33844</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-                <td class="candidate-list-favourite-time text-center">
-                  <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
-                  <span class="candidate-list-time order-1">Admitted</span>
-                </td>
-                <td>
-                  <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                    <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                    <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                    <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                  </ul>
-                </td>
-              </tr>
-              <tr class="candidates-list">
-                <td class="title">
-                  <div class="thumb">
-                    <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
-                  </div>
-                  <div class="candidate-list-details">
-                    <div class="candidate-list-info">
-                      <div class="candidate-list-title">
-                        <h5 class="mb-0"><a href="#">Vickie Meyer</a></h5>
-                      </div>
-                      <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                          <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
-                          <li><i class="fas fa-map-marker-alt pr-1"></i>Minneapolis, MN 55406</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-                <td class="candidate-list-favourite-time text-center">
-                  <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
-                  <span class="candidate-list-time order-1">Admitted</span>
-                </td>
-                <td>
-                  <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                    <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                    <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                    <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                  </ul>
-                </td>
-              </tr>
-              <tr class="candidates-list">
-                <td class="title">
-                  <div class="thumb">
-                    <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="">
-                  </div>
-                  <div class="candidate-list-details">
-                    <div class="candidate-list-info">
-                      <div class="candidate-list-title">
-                        <h5 class="mb-0"><a href="#">Nichole Haynes</a></h5>
-                      </div>
-                      <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                          <li><i class="fas fa-filter pr-1"></i>Information Technology</li>
-                          <li><i class="fas fa-map-marker-alt pr-1"></i>Botchergate, Carlisle</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-                <td class="candidate-list-favourite-time text-center">
-                  <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
-                  <span class="candidate-list-time order-1">Admitted</span>
-                </td>
-                <td>
-                  <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                    <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                    <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                    <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                  </ul>
-                </td>
-              </tr>
+            }
             </tbody>
           </table>
           <div class="text-center mt-3 mt-sm-3">
@@ -190,11 +76,13 @@
   </div>
 </div>
 @code {
-    private int currentCount = 0;
+   IEnumerable<StudentInfo> _students;
 
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
+  protected override void OnInitialized()
+  {
+      base.OnInitialized();
+      var s = studentRepository.GetAll();
+    _students = s.Result;
+  }
 
 }
