added spinner for loading students page

--- a/BlazorServerUniversity/Pages/_Layout.cshtml
+++ b/BlazorServerUniversity/Pages/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link href="/css/site.css" rel="stylesheet"/>
     <link href="BlazorServerUniversity.styles.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
-    
+    <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet"/>   
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
