added 2 queries and 2 new pages with tables

--- a/BlazorServerUniversity/_Imports.razor
+++ b/BlazorServerUniversity/_Imports.razor
@@ -9,3 +9,7 @@
 @using BlazorServerUniversity
 @using BlazorServerUniversity.Shared
 @using BlazorPro.Spinkit
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Data
+@using Syncfusion.Blazor.DropDowns
