--- a/BlazorServerUniversity/Shared/NavMenu.razor
+++ b/BlazorServerUniversity/Shared/NavMenu.razor
@@ -29,6 +29,20 @@
                 </div>    
         </AuthorizeView>
         
+        <AuthorizeView Roles="Admin">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Exams">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Exams
+                </NavLink>
+            </div>    
+        </AuthorizeView>
+              <AuthorizeView Roles="Admin">
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="Disciplines">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Disciplines
+                        </NavLink>
+                        </div>    
+                </AuthorizeView>
     </nav>
 </div>
 
