added new page student plan for students

--- a/BlazorServerUniversity/_Imports.razor
+++ b/BlazorServerUniversity/_Imports.razor
@@ -13,3 +13,5 @@
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Data
 @using Syncfusion.Blazor.DropDowns
+@using Syncfusion.Blazor.PdfViewerServer
+@using Syncfusion.Blazor.Buttons
