--- a/BlazorServerUniversity/Shared/NavMenu.razor
+++ b/BlazorServerUniversity/Shared/NavMenu.razor
@@ -28,7 +28,13 @@
                 </NavLink>
                 </div>    
         </AuthorizeView>
-        
+        <AuthorizeView Roles="Student">
+            <div class="nav-item px-3">
+                            <NavLink class="nav-link" href="StudyPlan">
+                                <span class="oi oi-book" aria-hidden="true"></span> Study plan
+                            </NavLink>
+                            </div>
+        </AuthorizeView>
         <AuthorizeView Roles="Admin">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Exams">
