added creating student page

--- a/BlazorServerUniversity/App.razor
+++ b/BlazorServerUniversity/App.razor
@@ -15,4 +15,5 @@
             </LayoutView>
         </NotFound>
     </Router>
-</CascadingAuthenticationState>
+<CascadingBlazoredModal/>
+    </CascadingAuthenticationState>
