--- a/BlazorServerUniversity/Pages/Students.razor
+++ b/BlazorServerUniversity/Pages/Students.razor
@@ -3,11 +3,15 @@
 @attribute [Authorize (Roles = "Admin")]
 
 @inject IStudentRepository studentRepository;
+@inject IModalService modal
+@inject NavigationManager _nav
 
 <SpinLoader IsLoading="isLoading" Spinner="SpinnerType.CircleFade" Center="true" Color="#800080">
   <ContentTemplate>
   
     <div class="container mt-3 mb-4">
+      <button type="button" class="btn btn-success float-end" @onclick="@(()=>_nav.NavigateTo("/StudentForm"))">Добавить студента
+      </button>
       <div class="col-lg-9 mt-4 mt-lg-0">
         <div class="row">
           <div class="col-md-12">
@@ -55,9 +59,15 @@
                     </td>
                     <td>
                       <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                        <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
+                        <li>
+                          <NavLink href="@($"Student/{student.IdStudent}")">
+                            <a class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a>
+                          </NavLink>
+                           </li>
                         <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                        <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
+                        <li>
+                          <a class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a>
+                        </li>
                       </ul>
                     </td>
                   </tr>
@@ -80,21 +90,21 @@
           </div>
         </div>
       </div>
-
     </div>
   </ContentTemplate>
 </SpinLoader>
 @code {
   private bool isLoading = true;
    IEnumerable<StudentInfo> _students;
-  
+
   protected override async Task OnInitializedAsync()
   {
     isLoading = true;
      await base.OnInitializedAsync();
      await Task.Delay(1500);
-     _students = (await studentRepository.GetAll());
+     _students = (await studentRepository.GetAllByGroup());
     isLoading = false;
   }
 
+  
 }
