--- a/BlazorServerUniversity/_Imports.razor
+++ b/BlazorServerUniversity/_Imports.razor
@@ -15,3 +15,9 @@
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.PdfViewerServer
 @using Syncfusion.Blazor.Buttons
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Syncfusion.Blazor.Popups
