--- a/BlazorServerUniversity/Pages/_Layout.cshtml
+++ b/BlazorServerUniversity/Pages/_Layout.cshtml
@@ -17,6 +17,8 @@
      <script src="_content/Syncfusion.Blazor.PdfViewer/scripts/syncfusion-blazor-pdfviewer.min.js" type="text/javascript"></script>
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="_content/Blazored.Modal/blazored-modal.css">
+    <link rel="stylesheet" href="_content/Blazored.Toast/blazored-toast.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
