added deleting students and all queries

--- a/BlazorServerUniversity/Pages/Students.razor
+++ b/BlazorServerUniversity/Pages/Students.razor
@@ -1,110 +1,165 @@
 @page "/students"
 @using BlazorServerUniversity.Repositories
-@attribute [Authorize (Roles = "Admin")]
+@using System.Transactions
+@attribute [Authorize(Roles = "Admin")]
 
 @inject IStudentRepository studentRepository;
+@inject IPersonalDataRepository PersonalRepository;
 @inject IModalService modal
 @inject NavigationManager _nav
 
 <SpinLoader IsLoading="isLoading" Spinner="SpinnerType.CircleFade" Center="true" Color="#800080">
-  <ContentTemplate>
-  
-    <div class="container mt-3 mb-4">
-      <button type="button" class="btn btn-success float-end" @onclick="@(()=>_nav.NavigateTo("/StudentForm"))">Добавить студента
-      </button>
-      <div class="col-lg-9 mt-4 mt-lg-0">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
-              <table class="table manage-candidates-top mb-0">
-                <thead>
-                <tr>
-                  <th>Student Name</th>
-                  <th class="text-center">Status</th>
-                  <th class="action text-right">Action</th>
-                </tr>
-                </thead>
+    <ContentTemplate>
 
-                <tbody>
-                @foreach (var student in _students)
-                {
-                  <tr class="candidates-list">
+        <div class="container mt-3 mb-4">
+            <button type="button" class="btn btn-success float-end" @onclick="@(() => _nav.NavigateTo("/StudentForm"))">
+                Добавить студента
+            </button>
+            <div class="col-lg-9 mt-4 mt-lg-0">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
+                            <table class="table manage-candidates-top mb-0">
+                                <thead>
+                                <tr>
+                                    <th>Student Name</th>
+                                    <th class="text-center">Status</th>
+                                    <th class="action text-right">Action</th>
+                                </tr>
+                                </thead>
 
-                    <td class="title">
-                      <div class="thumb">
-                        <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
-                      </div>
-                      <div class="candidate-list-details">
-                        <div class="candidate-list-info">
-                          <div class="candidate-list-title">
-                            <h5 class="mb-0">
-                              <NavLink href="@($"Student/{student.IdStudent}")">
-                                <a>@student.FirstName @student.LastName</a >
-                              </NavLink>
-                            </h5>
-                          </div>
-                          <div class="candidate-list-option">
-                            <ul class="list-unstyled">
-                              <li><i class="fas fa-filter pr-1"></i> @student.GroupName</li>
-                              <li><i class="fas fa-map-marker-alt pr-1"></i> @student.Address</li>
-                            </ul>
-                          </div>
+                                <tbody>
+                                @foreach (var student in _students)
+                                {
+                                    <tr class="candidates-list">
+
+                                        <td class="title">
+                                            <div class="thumb">
+                                                <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
+                                            </div>
+                                            <div class="candidate-list-details">
+                                                <div class="candidate-list-info">
+                                                    <div class="candidate-list-title">
+                                                        <h5 class="mb-0">
+                                                            <NavLink href="@($"Student/{student.IdStudent}")">
+                                                                <a>@student.FirstName @student.LastName</a >
+                                                            </NavLink>
+                                                        </h5>
+                                                    </div>
+                                                    <div class="candidate-list-option">
+                                                        <ul class="list-unstyled">
+                                                            <li>
+                                                                <i class="fas fa-filter pr-1"></i> @student.GroupName
+                                                            </li>
+                                                            <li>
+                                                                <i class="fas fa-map-marker-alt pr-1"></i> @student.Address
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+
+                                        <td class="candidate-list-favourite-time text-center">
+                                            <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
+                                            <span class="candidate-list-time order-1">Admitted</span>
+                                        </td>
+                                        <td>
+                                            <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                                                <li>
+                                                    <NavLink href="@($"Student/{student.IdStudent}")">
+                                                        <a class="text-primary" data-toggle="tooltip" title="" data-original-title="view">
+                                                            <i class="far fa-eye"></i>
+                                                        </a>
+                                                    </NavLink>
+                                                </li>
+                                                <li>
+                                                    <a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit">
+                                                        <i class="fas fa-pencil-alt"></i>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete" @onclick="() => OpenDeleteDialog(student)">
+                                                        <i class="far fa-trash-alt"></i>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                }
+                                </tbody>
+
+                            </table>
+                            <div class="text-center mt-3 mt-sm-3">
+                                <ul class="pagination justify-content-center mb-0">
+                                    <li class="page-item disabled">
+                                        <span class="page-link">Prev</span>
+                                    </li>
+                                    <li class="page-item active" aria-current="page">
+                                        <span class="page-link">1 </span> <span class="sr-only">(current)</span>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">2</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">...</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">25</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">Next</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                      </div>
-                    </td>
-
-                    <td class="candidate-list-favourite-time text-center">
-                      <a class="candidate-list-favourite order-2 text-danger" href="#"></a>
-                      <span class="candidate-list-time order-1">Admitted</span>
-                    </td>
-                    <td>
-                      <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                        <li>
-                          <NavLink href="@($"Student/{student.IdStudent}")">
-                            <a class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a>
-                          </NavLink>
-                           </li>
-                        <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                        <li>
-                          <a class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a>
-                        </li>
-                      </ul>
-                    </td>
-                  </tr>
-                }
-                </tbody>
-
-              </table>
-              <div class="text-center mt-3 mt-sm-3">
-                <ul class="pagination justify-content-center mb-0">
-                  <li class="page-item disabled"> <span class="page-link">Prev</span> </li>
-                  <li class="page-item active" aria-current="page"><span class="page-link">1 </span> <span class="sr-only">(current)</span></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item"><a class="page-link" href="#">...</a></li>
-                  <li class="page-item"><a class="page-link" href="#">25</a></li>
-                  <li class="page-item"> <a class="page-link" href="#">Next</a> </li>
-                </ul>
-              </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </ContentTemplate>
+        @if (DeleteDialogOpen)
+        {
+            <ModalDialog Title="Are you sure?" Text="Do you want to delete this student?" OnClose="@OnDeleteDialogClose"
+                         DialogType="ModalDialog.ModalDialogType.DeleteCancel"/>
+        }
+    </ContentTemplate>
 </SpinLoader>
+
 @code {
-  private bool isLoading = true;
-   IEnumerable<StudentInfo> _students;
+    private bool isLoading = true;
+    private StudentInfo _studentToDelete;
+    IEnumerable<StudentInfo> _students;
+    public bool DeleteDialogOpen { get; set; }
 
-  protected override async Task OnInitializedAsync()
-  {
-    isLoading = true;
-     await base.OnInitializedAsync();
-     await Task.Delay(1500);
-     _students = (await studentRepository.GetAllByGroup());
-    isLoading = false;
-  }
+    private async Task OnDeleteDialogClose(bool accepted)
+    {
+        if (accepted)
+        {
+                await PersonalRepository.Remove(_studentToDelete);
+                _studentToDelete = null;
+        }
+        DeleteDialogOpen = false;
+        StateHasChanged();
+    }
 
-  
+    private void OpenDeleteDialog(StudentInfo student)
+    {
+        DeleteDialogOpen = true;
+        _studentToDelete = student;
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        isLoading = true;
+        await base.OnInitializedAsync();
+        await Task.Delay(1500);
+        _students = (await studentRepository.GetAllByGroup());
+        isLoading = false;
+    }
+
+
 }
