--- a/BlazorServerUniversity/Pages/StudentPage.razor
+++ b/BlazorServerUniversity/Pages/StudentPage.razor
@@ -34,8 +34,8 @@
                                         <h4>@_student.FirstName @_student.LastName</h4>
                                         <p class="text-secondary mb-1">@_student.Age лет</p>
                                         <p class="text-muted font-size-sm">@_student.Address</p>
-                                        <button class="btn btn-primary">Написать</button>
-                                        <button class="btn btn-outline-primary">Удалить</button>
+                                        <button class="btn btn-primary">В академ отпуск</button>
+                                        <button class="btn btn-outline-danger">Удалить</button>
                                     </div>
                                 </div>
                             </div>
