--- a/BlazorServerUniversity/Pages/_Layout.cshtml
+++ b/BlazorServerUniversity/Pages/_Layout.cshtml
@@ -19,6 +19,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="_content/Blazored.Modal/blazored-modal.css">
     <link rel="stylesheet" href="_content/Blazored.Toast/blazored-toast.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
